# pip-ecosystem

./: README.md  pyproject.toml
src/hi_humans/: _init_  setup.py
