[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hi_humans"
version = "0.0.4"
authors = [
  { name = "Mariya Sha", email = "mariya@pythonsimplified.org" },
]
description = "collection of biblical humans and their family relations"
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/prudhviraj44/pip-ecosystem"
Issues = "https://github.com/prudhviraj44/pip-ecosystem"

[tool.hatch.build.targets.wheel]
packages = ["src/hi_humans"]
